# ntc-soteria

./: .bandit.yml  .env-example  .gitignore  Dockerfile  Makefile  README.md  batfish_acl_checker.py  batfish_shell.py  docker-compose.yml  flow_validator.py  flows.yml  pyproject.toml  report.html  requirements.txt
acl_auditor/: auditor.py  helpers.py  report.j2  reporter.py
data/: asa.cfg  csr.cfg  flows.yml  report.html
tests/: example_flows.yml  test_flows.yml
tests/unit/: test_create_acl.py  test_helpers.py
