[tool.poetry]
name = "batfish-flow-checker"
version = "0.1.0"
description = ""
authors = ["Rick Donato <rick.donato@networktocode.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.4.3"
pybatfish = "^2020.4.23"
pylint = "^2.5.2"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
